Bug 115855 - [Qt][WK1]REGRESSION(r149532) tst_qwebelement and tst_qwebframe API tests crash
Summary: [Qt][WK1]REGRESSION(r149532) tst_qwebelement and tst_qwebframe API tests crash
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Tools / Tests (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords:
Depends on:
Blocks: 38654 115563 116092
  Show dependency treegraph
 
Reported: 2013-05-09 04:40 PDT by Ádám Kallai
Modified: 2013-05-14 01:24 PDT (History)
6 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ádám Kallai 2013-05-09 04:40:46 PDT
Could you check what happened to it?

qwebelement:
1   0x7f577dd844ba /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQt5WebKit.so.5(+0x4d24ba) [0x7f577dd844ba]
2   0x7f577dd8da4b /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQt5WebKit.so.5(+0x4dba4b) [0x7f577dd8da4b]
3   0x7f577dd8c2e7 /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQt5WebKit.so.5(+0x4da2e7) [0x7f577dd8c2e7]
4   0x7f577dd883e5 /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQt5WebKit.so.5(_ZNK11QWebElement13stylePropertyERK7QStringNS_20StyleResolveStrategyE+0x259) [0x7f577dd883e5]
5   0x40dd96 WebKitBuild/Debug/Source/WebKit/qt/tests/qwebelement/tst_qwebelement() [0x40dd96]
6   0x415fc6 WebKitBuild/Debug/Source/WebKit/qt/tests/qwebelement/tst_qwebelement() [0x415fc6]
7   0x7f577c4ad19b /usr/local/Trolltech/Qt5/Qt-5.0.1/lib/libQt5Core.so.5(_ZNK11QMetaMethod6invokeEP7QObjectN2Qt14ConnectionTypeE22QGenericReturnArgument16QGenericArgumentS5_S5_S5_S5_S5_S5_S5_S5_S5_+0x44b) [0x7f577c4ad19b]
8   0x7f577c4b082e /usr/local/Trolltech/Qt5/Qt-5.0.1/lib/libQt5Core.so.5(_ZN11QMetaObject12invokeMethodEP7QObjectPKcN2Qt14ConnectionTypeE22QGenericReturnArgument16QGenericArgumentS7_S7_S7_S7_S7_S7_S7_S7_S7_+0x3ee) [0x7f577c4b082e]
9   0x7f577cea3e5a /usr/local/Trolltech/Qt5/Qt-5.0.1/lib/libQt5Test.so.5(+0xde5a) [0x7f577cea3e5a]
10  0x7f577cea4bdc /usr/local/Trolltech/Qt5/Qt-5.0.1/lib/libQt5Test.so.5(_ZN5QTest5qExecEP7QObjectiPPc+0x5dc) [0x7f577cea4bdc]
11  0x415e0e WebKitBuild/Debug/Source/WebKit/qt/tests/qwebelement/tst_qwebelement() [0x415e0e]
12  0x7f577bbe576d /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xed) [0x7f577bbe576d]
13  0x4060b9 WebKitBuild/Debug/Source/WebKit/qt/tests/qwebelement/tst_qwebelement() [0x4060b9]

qwebframe:
1   0x7f4f79e224ba /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQt5WebKit.so.5(+0x4d24ba) [0x7f4f79e224ba]
2   0x7f4f79e2ba4b /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQt5WebKit.so.5(+0x4dba4b) [0x7f4f79e2ba4b]
3   0x7f4f79e2a2e7 /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQt5WebKit.so.5(+0x4da2e7) [0x7f4f79e2a2e7]
4   0x7f4f79e263e5 /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQt5WebKit.so.5(_ZNK11QWebElement13stylePropertyERK7QStringNS_20StyleResolveStrategyE+0x259) [0x7f4f79e263e5]
5   0x40f46f WebKitBuild/Debug/Source/WebKit/qt/tests/qwebframe/tst_qwebframe() [0x40f46f]
6   0x419b0f WebKitBuild/Debug/Source/WebKit/qt/tests/qwebframe/tst_qwebframe() [0x419b0f]
7   0x7f4f781f819b /usr/local/Trolltech/Qt5/Qt-5.0.1/lib/libQt5Core.so.5(_ZNK11QMetaMethod6invokeEP7QObjectN2Qt14ConnectionTypeE22QGenericReturnArgument16QGenericArgumentS5_S5_S5_S5_S5_S5_S5_S5_S5_+0x44b) [0x7f4f781f819b]
8   0x7f4f781fb82e /usr/local/Trolltech/Qt5/Qt-5.0.1/lib/libQt5Core.so.5(_ZN11QMetaObject12invokeMethodEP7QObjectPKcN2Qt14ConnectionTypeE22QGenericReturnArgument16QGenericArgumentS7_S7_S7_S7_S7_S7_S7_S7_S7_+0x3ee) [0x7f4f781fb82e]
9   0x7f4f78beee5a /usr/local/Trolltech/Qt5/Qt-5.0.1/lib/libQt5Test.so.5(+0xde5a) [0x7f4f78beee5a]
10  0x7f4f78befbdc /usr/local/Trolltech/Qt5/Qt-5.0.1/lib/libQt5Test.so.5(_ZN5QTest5qExecEP7QObjectiPPc+0x5dc) [0x7f4f78befbdc]
11  0x4199ad WebKitBuild/Debug/Source/WebKit/qt/tests/qwebframe/tst_qwebframe() [0x4199ad]
12  0x7f4f7793076d /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xed) [0x7f4f7793076d]
13  0x40a7b9 WebKitBuild/Debug/Source/WebKit/qt/tests/qwebframe/tst_qwebframe() [0x40a7b9]
Comment 1 Andreas Kling 2013-05-09 06:10:53 PDT
Committed r149800: <http://trac.webkit.org/changeset/149800>