[Qt][WK1]REGRESSION(r149532) tst_qwebelement and tst_qwebframe API tests crash. <http://webkit.org/b/115855>

Fix obvious off-by-one mistake.

* Api/qwebelement.cpp:
(QWebElement::styleProperty):

Canonical link: https://commits.webkit.org/134260@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149800 268f45cc-cd09-0410-ab3c-d52691b4dbfc